$ costo de capacitacion y rpt_renuncias

--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -45,7 +45,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Costo Por Persona:</label>
+                <label class="col-sm-2 control-label">Costo Por Persona $:</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control num_decimal2" required="true" maxlength="5" th:field="*{costopersona}"/>
                 </div>
@@ -68,7 +68,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Costo Capacitador:</label>
+                <label class="col-sm-2 control-label">Costo Capacitador $:</label>
                 <div class="col-sm-2">
                     <input type="text" class="form-control num_decimal2"  required="true" maxlength="6" th:field="*{costocapacitador}"/>
                 </div>
