--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -88,7 +88,7 @@
                 <div class="col-md-12"  >
                     <div class="form-group">
                         <br>
-                        <label class="col-sm-3 control-label">Nombre del Contacto(*):</label>
+                        <label class="col-sm-3 control-label">Nombres del Contacto(*):</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control"   required="true" size="50" maxlength="50" th:field="*{nombrecontacto}"  />
                         </div>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Apellido del Contacto(*):</label>
+                        <label class="col-sm-3 control-label">Apellidos del Contacto(*):</label>
                         <div class="col-sm-5">
                             <input type="text" class="form-control"  required="true" size="50" maxlength="50" th:field="*{apellidocontacto}"   />
                         </div>
