npmbre mas apellido en combox

--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -32,7 +32,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <label class="col-sm-2 control-label">Responsable Directo:(*):</label>
                 <div class="col-sm-5">
                      <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
-                                <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                                <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}+', '+${c.apellidoempleado}"></option>
                             </select>
                    <!--<input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
                 </div>
