agregando cambios de sweet alert local

--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<!--script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script-->
         <title>Crear Capacitador</title>
     <th:block th:include="../templates/header"></th:block>
     
@@ -256,6 +256,6 @@ function valida(e){
     return patron.test(tecla_final);
 }
 </script>
-<script type="text/javascript" th:src="@{/js/sweetalert.js}"></script>
+<!--script type="text/javascript" th:src="@{/js/sweetalert.js}"></script>
 <script type="text/javascript" th:src="@{/js/SweetAlert.min.js}"></script>
-<script type="text/javascript" th:src="@{/ccs/sweetalert.ccs}"></script>
+<script type="text/javascript" th:src="@{/ccs/sweetalert.ccs}"></script-->
