--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,7 +12,7 @@
         <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
          <script type="text/javascript" th:src="@{/js/jquery-ui.js}"></script>
         <!--<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>-->
-        <script type="text/javascript" th:src="@{/js/SweetAlert.min}"></script>
+        <script type="text/javascript" th:src="@{/js/SweetAlert.min.js}"></script>
         <!--SweetAlert.min-->
         <!--<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>-->
         <script type="text/javascript" th:src="@{/js/jquery.dataTables.min.js}"></script>
