--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<!--script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script-->
         <title>Crear Incapacidad</title>
     <th:block th:include="../templates/header"></th:block>
     
@@ -285,7 +285,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         }
 </script>
 
-<script type="text/javascript" th:src="@{/js/sweetalert.js}"></script>
+<!--script type="text/javascript" th:src="@{/js/sweetalert.js}"></script>
 <script type="text/javascript" th:src="@{/js/SweetAlert.min.js}"></script>
-<script type="text/javascript" th:src="@{/ccs/sweetalert.ccs}"></script>
+<script type="text/javascript" th:src="@{/ccs/sweetalert.ccs}"></script-->
 </html>
