agregado modf a usuario

--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -31,12 +31,23 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Usuario:</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
+                    <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombrecompleto}" />
                 </div>
                  <div class="popup col-sm-1"><b>
                                     <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
 
                                 <span class="popuptext" id="nomUser">Ingrese el Nombre del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
+                            </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Identificador de Usuario:</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
+                </div>
+                 <div class="popup col-sm-1"><b>
+                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
+
+                                <span class="popuptext" id="nomUser">Ingrese el identificador del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
                             </div>
             </div>
             <div class="form-group">
