--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -175,7 +175,7 @@
         swal({
         type: 'error',
                 title: 'Oops...',
-                text: 'error LA FECHA HASTA DEBE SER MAYOR!',
+                text: 'Error la fecha hasata debe ser Mayor!',
                 footer: '<a href>Why do I have this issue?</a>'
         })
                 return false;
@@ -184,8 +184,8 @@
         else{
         swal({
         type: 'exito',
-                title: 'exito',
-                text: 'correcto!',
+                title: 'Fecha Correcta',
+                text: 'Fecha correcta!',
                 footer: '<a href>Why do I have this issue?</a>'
         })
                 return true;
