--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -114,7 +114,7 @@
     function eliminar(id) {
     swal({
     title: "Desea Eliminar?",
-            text: "favor confirme que desea eliminar este registro!",
+            text: "Favor confirme que desea eliminar este registro!",
             icon: "warning",
             buttons: true,
             dangerMode: true,
@@ -123,7 +123,7 @@
             if (willDelete) {
             location.href = './delete/' + id;
             } else {
-            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
             }
             });
     }
