--- a/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
@@ -33,7 +33,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="col-sm-8">
                             <select class="form-control" id="codigo" name="codigo">
                             <option value="0">-- Seleccione El Empleado --</option>
-                            <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}"></option>
+                            <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}+', '+${d.apellidoempleado}"></option>
                             </select>
                             <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
